<resources>
    <string name="app_name">MagicWords</string>
    <string name="main_btn_play">Play</string>
    <string name="main_btn_rules">Rules</string>
    <string name="main_btn_records">Records</string>
    <string name="main_btn_settings">Settings</string>
    <string name="choose_mode_btn_simple_mode">Classic</string>
    <string name="choose_mode_btn_limit_of_attempts">Limit attempts</string>
    <string name="choose_mode_btn_limit_of_time">Limit time</string>
    <string name="game_btn_answer">Send</string>
    <string name="menu_mode_choice_classic">Classic</string>
    <string name="menu_mode_choice_limit_time">Timer</string>
    <string name="menu_mode_choice_limit_attempts">Attempts</string>
    <string name="fragment_choose_mode_simple">Simple</string>
    <string name="fragment_choose_mode_hard">Hard</string>
    <string name="fragment_choose_mode_three">3 Letters</string>
    <string name="fragment_choose_mode_four">4 Letters</string>
    <string name="fragment_choose_mode_five">5 Letters</string>
    <string name="fragment_choose_mode_dif_text">Difficulty level:</string>
    <string name="fragment_choose_mode_num_letters_text">Word length:</string>
    <string name="fragment_choose_mode_slider_text">Attempts number:</string>
    <string name="fragment_game_attempts_text">Attempts:</string>
    <string name="fragment_game_attempts_to_end_text">Attempts left:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>