<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ClassicModeChoiceFragment">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">
    <TextView
        android:id="@+id/choose_classic_mode_dif_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/fragment_choose_mode_dif_text"
        android:gravity="top"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/choose_classic_mode_dif_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/choose_classic_mode_dif_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:checkedButton="@+id/choose_classic_mode_dif_simple"
        app:layout_constraintTop_toBottomOf="@+id/choose_classic_mode_dif_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/choose_classic_mode_num_letters_text">

        <RadioButton
            android:id="@+id/choose_classic_mode_dif_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/fragment_choose_mode_simple" />

        <RadioButton
            android:id="@+id/choose_classic_mode_dif_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/fragment_choose_mode_hard" />
    </RadioGroup>

    <TextView
        android:id="@+id/choose_classic_mode_num_letters_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_choose_mode_num_letters_text"
        android:textSize="23sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
<!--        app:layout_constraintTop_toBottomOf="choose_classic_mode_dif_group"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/choose_classic_mode_num_letters_group"/>-->

    <RadioGroup
        android:id="@+id/choose_classic_mode_num_letters_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:checkedButton="@+id/choose_classic_mode_num_letters_4">
<!--        app:layout_constraintTop_toBottomOf="choose_classic_mode_num_letters_text"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/choose_classic_mode_btn_start">-->

        <RadioButton
            android:id="@+id/choose_classic_mode_num_letters_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/fragment_choose_mode_three" />

        <RadioButton
            android:id="@+id/choose_classic_mode_num_letters_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/fragment_choose_mode_four" />

        <RadioButton
            android:id="@+id/choose_classic_mode_num_letters_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/fragment_choose_mode_five" />
    </RadioGroup>

    <Button
        android:id="@+id/choose_classic_mode_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_play"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        />
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="parent"-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>