<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttemptsLimitModeChoiceFragment">

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:gravity="center">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/choose_classic_mode_dif_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="top"
            android:text="@string/fragment_choose_mode_dif_text"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/choose_classic_mode_dif_group"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/choose_classic_mode_dif_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/choose_classic_mode_dif_simple"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/choose_classic_mode_num_letters_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_classic_mode_dif_text">

            <RadioButton
                android:id="@+id/choose_classic_mode_dif_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:buttonTint="@color/white"
                android:text="@string/fragment_choose_mode_simple"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/choose_classic_mode_dif_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:buttonTint="@color/white"
                android:text="@string/fragment_choose_mode_hard"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/choose_classic_mode_num_letters_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/fragment_choose_mode_num_letters_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />
        <!--        app:layout_constraintTop_toBottomOf="choose_classic_mode_dif_group"-->
        <!--        app:layout_constraintLeft_toLeftOf="parent"-->
        <!--        app:layout_constraintRight_toRightOf="parent"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/choose_classic_mode_num_letters_group"/>-->

        <RadioGroup
            android:id="@+id/choose_classic_mode_num_letters_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/choose_classic_mode_num_letters_4"
            android:gravity="center"
            android:orientation="horizontal">
            <!--        app:layout_constraintTop_toBottomOf="choose_classic_mode_num_letters_text"-->
            <!--        app:layout_constraintLeft_toLeftOf="parent"-->
            <!--        app:layout_constraintRight_toRightOf="parent"-->
            <!--        app:layout_constraintBottom_toTopOf="@+id/choose_classic_mode_btn_start">-->

            <RadioButton
                android:id="@+id/choose_classic_mode_num_letters_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:buttonTint="@color/white"
                android:text="@string/fragment_choose_mode_three"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/choose_classic_mode_num_letters_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:buttonTint="@color/white"
                android:text="@string/fragment_choose_mode_four"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/choose_classic_mode_num_letters_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:buttonTint="@color/white"
                android:text="@string/fragment_choose_mode_five"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/choose_classic_mode_slider_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/fragment_choose_mode_slider_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <com.google.android.material.slider.Slider
            android:id="@+id/attempts_limit_mode_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:stepSize="1.0"
            android:valueFrom="1.0"
            android:valueTo="15.0"
            app:tickColor="@color/design_default_color_primary"
            app:trackColor="@color/white"
            app:thumbColor="@color/design_default_color_primary"/>

        <Button
            android:id="@+id/choose_classic_mode_btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/main_btn_play"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintLeft_toLeftOf="parent"-->
        <!--        app:layout_constraintRight_toRightOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="parent"-->

    </LinearLayout>
    <!--    </ScrollView>-->
</androidx.constraintlayout.widget.ConstraintLayout>